WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221947
lab() and lch() are not clamping out of bounds values at parse time
https://bugs.webkit.org/show_bug.cgi?id=221947
Summary
lab() and lch() are not clamping out of bounds values at parse time
Sam Weinig
Reported
2021-02-15 19:40:07 PST
lab() and lch() are not clamping out of bands values at parse time
Attachments
Patch
(3.10 KB, patch)
2021-02-15 19:55 PST
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Patch
(8.21 KB, patch)
2021-02-15 19:56 PST
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Patch with title fixed
(8.22 KB, patch)
2021-02-16 08:54 PST
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2021-02-15 19:55:10 PST
Comment hidden (obsolete)
Created
attachment 420418
[details]
Patch
Sam Weinig
Comment 2
2021-02-15 19:56:10 PST
Created
attachment 420419
[details]
Patch
Sam Weinig
Comment 3
2021-02-16 08:54:13 PST
Created
attachment 420474
[details]
Patch with title fixed
EWS
Comment 4
2021-02-16 09:26:07 PST
Committed
r272909
: <
https://commits.webkit.org/r272909
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420474
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-02-16 09:27:13 PST
<
rdar://problem/74394228
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug