lab() and lch() are not clamping out of bounds values at parse time https://bugs.webkit.org/show_bug.cgi?id=221947

Reviewed by Simon Fraser.

The model level assertions caught this (yay). The spec requires that we
clamp negative lightness values to 0 for lab(), lch() and color(lab)
and negative chroma values to 0 for lch().

Source/WebCore:

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::parseLabParameters):
(WebCore::CSSPropertyParserHelpers::parseLCHParameters):
(WebCore::CSSPropertyParserHelpers::parseColorFunctionForLabParameters):

LayoutTests:

* fast/css/parsing-lab-colors-expected.txt:
* fast/css/parsing-lab-colors.html:


Canonical link: https://commits.webkit.org/234142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272909 268f45cc-cd09-0410-ab3c-d52691b4dbfc